--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -61,12 +61,7 @@
 	<div class="login-center">
 		<div ng-if="loginFB && !showLoggedInProfile" class="center" flex ng-click ='facebookAuth()' >
 		<h3 class="marg-12 color-light">Create Private Room and Invite your friends</h3>
-				<!--md-card class="flogin flogin-mobile">
-					<i class="card-img-upper fa fa-facebook" ></i>
-					<i class="card-img md-card-image fa fa-facebook" style="color:#fff; font-size:100pt; display:inline; width:auto;" ></i>
-					<i class="card-img-lower fa fa-facebook" ></i>
-				</md-card-->
-				<md-button class="redcol home-elem md-raised" aria-label="randomGameStart" ng-click="startGame()">
+				<md-button class="redcol home-elem md-raised" aria-label="randomGameStart">
 					<div flex layout="horizontal" layout-align="center center">
 						<div style="margin-right:15px;">
 							<i class="fa fa-facebook fa-2x white-label"></i>
