--- a/platforms/android/assets/www/css/style3.css
+++ b/platforms/android/assets/www/css/style3.css
@@ -5,7 +5,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
-  background: rgba(255,255,255,0.95);
+  /*background: rgba(255,255,255,0.95);*/
   opacity: 1;
   z-index: 999;
   overflow: auto;
