--- a/platforms/android/assets/www/templates/register.html
+++ b/platforms/android/assets/www/templates/register.html
@@ -77,8 +77,8 @@
 		</div>
 		<div ng-if="loginAnon && !showLoggedInProfile" flex>
 			<div class="center" style="max-width:289px;">
-					<md-content md-theme="docs-dark" layout="row" layout-sm="column" style="font-size:1.2em">
-						<md-text-float class="username" label="Name" flex ng-model="user.name"> </md-text-float>
+					<md-content md-theme="docs-dark" layout="row" layout-sm="column" style="font-size:1.2em; color:white;">
+						<md-text-float class="username" label="Enter your name" flex ng-model="user.name"> </md-text-float>
 					</md-content>
 					<div style="width:100%; overflow:hidden; padding-top:12px; padding-bottom:12px;">
 						<div class="imageRow" ng-style="getImageRowWidth();" ng-swipe-left="shiftLeft()" ng-swipe-right="shiftRight()">
