--- a/www/css/cards/cards.css
+++ b/www/css/cards/cards.css
@@ -772,10 +772,15 @@
 /* page specific animations ------------------------ */
 
 /* home -------------------------- */
-.page-home.ng-leave {
+.page-home.ng-leave, .page-home.ng-hide, .overlay.ng-hide, .hidemultiplayeropt.ng-hide {
     -webkit-animation:slideOutLeft 0.5s both ease-in;
     -moz-animation:slideOutLeft 0.5s both ease-in;
     animation:slideOutLeft 0.5s both ease-in;  
+}
+.showmultiplayer.ng-hide{
+    animation-delay: 0s;
+    -webkit-animation-delay: 0s;
+    -moz-animation-delay: 0s;
 }
 .page-home.ng-enter         {  
     -webkit-animation:scaleUp 0.5s both ease-in;
@@ -799,12 +804,16 @@
     -moz-animation:slideOutLeft 0.5s both ease-in;
     animation:slideOutLeft 0.5s both ease-in;   
 }
-.page-about.ng-enter        {  
+.page-about.ng-enter, .page-home, .overlay,.showmultiplayeropt, .hidemultiplayeropt{  
     -webkit-animation:slideInRight 0.5s both ease-in;
     -moz-animation:slideInRight 0.5s both ease-in;
     animation:slideInRight 0.5s both ease-in;    
 }
-
+.showmultiplayeropt, .hidemultiplayeropt{
+    animation-delay: 0.5s;
+    -webkit-animation-delay: 0.5s;
+    -moz-animation-delay: 0.5s;
+}
 /* cover ---------------------- */
 .page-cover.ng-leave{
     /*-webkit-transform-origin: 50% 50%;
