--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -10,7 +10,7 @@
 				</thead>
 				<tbody>
 					<tr>
-						<td colspan="3" class="selected column-td" style="width:140px;">
+						<td colspan="3" class="selected column-td" style="width:140px;color:white;">
 							<div>
 								<span><h3 class="marg-12"><i class="fa fa-gear">&nbsp;</i>Settings</h3></span>
 							</div>
@@ -203,6 +203,7 @@
 	.color-name{
 		padding: 6px 4px 8px 4px;
 		text-align: center;
+		color: white;
 	}
 	.color-list-block{
 		float:left;
