--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -29,4 +29,5 @@
     <allow-intent href="geo:*" />
     <preference name="Fullscreen" value="false" />
     <preference name="Orientation" value="landscape" />
+    <icon src="res/icon.png" />
 </widget>
