--- a/www/templates/homenew2.html
+++ b/www/templates/homenew2.html
@@ -40,17 +40,19 @@
         </div>
       </md-button>
     </div>
-    <div class="mob-opt" style="margin-top:5px;">
-      <a class="nav-icon href-custom settings-tab" target="_blank" href="javascript:void(0);" ng-click="showSettings()" style="color:white;">
-        <i class="fa fa-gear fa-2x" title="Settings"></i>
-        <span>Settings</span>
-      </a>
-    </div>
-    <div class="mob-opt">
-      <a class="nav-icon href-custom settings-tab" target="_blank" href="javascript:void(0);" ng-click="logOut()" ng-controller="registerCtrl" style="color:white;">
-        <i class="fa fa-sign-out fa-2x" style="color:white"></i>
-        <span>Logout</span>
-      </a>
+    <div class="mob-opt-horz">
+      <div class="mob-opt">
+        <a class="nav-icon href-custom settings-tab" target="_blank" href="javascript:void(0);" ng-click="showSettings()" style="color:white;">
+          <i class="fa fa-gear fa-2x" title="Settings"></i>
+          <span>Settings</span>
+        </a>
+      </div>
+      <div class="mob-opt">
+        <a class="nav-icon href-custom settings-tab" target="_blank" href="javascript:void(0);" ng-click="logOut()" ng-controller="registerCtrl" style="color:white;">
+          <i class="fa fa-sign-out fa-2x" style="color:white"></i>
+          <span>Logout</span>
+        </a>
+      </div>
     </div>
   </div>
   <div ng-show="showMultiplayerOptions" class='mob-opt-wrap showmultiplayeropt'>
@@ -79,23 +81,25 @@
       </div>
     </md-button>
     </div>
-    <div ng-show="showLoggedInOptions" class="mob-opt">
+    <div ng-show="showLoggedInOptions" class="mob-opt" style="width:400px;">
       <md-text-float label="Enter Room ID" flex ng-model="joinGameRoomId" ng-enter="toggleRoomOptions()" class="join-room-input"> </md-text-float>
-      <md-button class="bluecoldark md-raised home-button" ng-click="joinGame()" aria-label="privateGameJoin">
+      <md-button class="redcol md-raised" ng-click="joinGame()" aria-label="privateGameJoin">
         {{roomText}}
       </md-button>
     </div>
-    <div class="mob-opt" style="margin-top:5px;">
-      <a class="nav-icon href-custom settings-tab" target="_blank" href="javascript:void(0);" ng-click="showSettings()" style="color:white;">
-        <i class="fa fa-gear fa-2x" title="Settings"></i>
-        <span>Settings</span>
-      </a>
-    </div>
-    <div class="mob-opt">
-      <a class="nav-icon href-custom settings-tab" target="_blank" href="javascript:void(0);" ng-click="logOut()" ng-controller="registerCtrl" style="color:white;">
-        <i class="fa fa-sign-out fa-2x" style="color:white"></i>
-        <span>Logout</span>
-      </a>
+    <div class="mob-opt-horz">
+      <div class="mob-opt" style="margin-top:5px;">
+        <a class="nav-icon href-custom settings-tab" target="_blank" href="javascript:void(0);" ng-click="showSettings()" style="color:white;">
+          <i class="fa fa-gear fa-2x" title="Settings"></i>
+          <span>Settings</span>
+        </a>
+      </div>
+      <div class="mob-opt">
+        <a class="nav-icon href-custom settings-tab" target="_blank" href="javascript:void(0);" ng-click="logOut()" ng-controller="registerCtrl" style="color:white;">
+          <i class="fa fa-sign-out fa-2x" style="color:white"></i>
+          <span>Logout</span>
+        </a>
+      </div>
     </div>
   </div>
   <div>
