--- a/platforms/android/assets/www/templates/homenew2.html
+++ b/platforms/android/assets/www/templates/homenew2.html
@@ -68,7 +68,7 @@
         </div>
       </md-button>
     </div>
-    <div ng-show="!showLoggedInOptions" class="mob-opt">
+    <div ng-hide="showLoggedInOptions" class="mob-opt">
       <h3 style="color:white;">Create Private rooms and Invite your friends</h3>
       <md-button class="redcol home-elem md-raised" aria-label="randomGameStart" ng-click="loginWIthFB()">
       <div flex layout="horizontal" layout-align="center center">
