--- a/platforms/android/res/xml/config.xml
+++ b/platforms/android/res/xml/config.xml
@@ -11,6 +11,10 @@
     <feature name="InAppBrowser">
         <param name="android-package" value="org.apache.cordova.inappbrowser.InAppBrowser" />
     </feature>
+    <feature name="SplashScreen">
+        <param name="android-package" value="org.apache.cordova.splashscreen.SplashScreen" />
+        <param name="onload" value="true" />
+    </feature>
     <allow-intent href="market:*" />
     <name>TeenDoPaanch</name>
     <description>
@@ -29,5 +33,6 @@
     <allow-intent href="geo:*" />
     <preference name="Fullscreen" value="false" />
     <preference name="Orientation" value="landscape" />
+    <preference name="SplashScreenDelay" value="10000" />
     <icon src="res/icon.png" />
 </widget>
