--- a/www/css/gameStyle.css
+++ b/www/css/gameStyle.css
@@ -1114,13 +1114,7 @@ md-content.md-padding{
 }
 
 /*Player profiles*/
-.players-profile{
-  background-color: #eee;
-  padding: 1px 8px;
-  border-radius: 4px;
-  text-align: center;
-  max-width: 100px;
-}
+
 .ball {
   position: relative;
   height: 45px;
@@ -1402,28 +1396,7 @@ md-button.md-fab.sidebutton{
   -webkit-transform: translate3d(0, 0, 0);
   /*will-change:transform;*/
 }
-.statistics{
-    font-size: 16pt;
-    font-weight: 400;
-    position: absolute;
-    /*top: 180px;*/
-    width: 40px;
-    left: 0;
-}
-.right-player .ball .statistics{
-  text-align: end !important;
-  left: -58px;
-  top: 20px;
-}
-.left-player .ball .statistics{
-  text-align: start !important;
-  left: 60px;
-  top: 20px;
-}
-.bottom-player .statistics{
-  top: 20px;
-  left: 55px;
-}
+
 md-progress-circular.game-waiting-progress.md-default-theme .md-circle .md-mask .md-fill{
   background-color: #009688;
 }
@@ -2877,4 +2850,120 @@ md-dialog md-content{
     margin: 12px;
     width: 19px;
 }
-        
+.stat-img{
+    width: 10px;
+    height: 10px;
+    position: relative;
+    margin: 1px 1px;
+    float: left;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    border-radius: 50%;
+    -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+       -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+            box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+
+    border:white solid 1px;
+}
+.right-player .ball .stat-img{
+    float: right;
+}
+.stat-img.fillgrey{
+    background: rgb(238,238,238); /* Old browsers */
+    background: -moz-linear-gradient(-45deg,  rgba(238,238,238,1) 0%, rgba(189,189,189,1) 47%, rgba(158,158,158,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(238,238,238,1)), color-stop(47%,rgba(189,189,189,1)), color-stop(100%,rgba(158,158,158,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(-45deg,  rgba(238,238,238,1) 0%,rgba(189,189,189,1) 47%,rgba(158,158,158,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(-45deg,  rgba(238,238,238,1) 0%,rgba(189,189,189,1) 47%,rgba(158,158,158,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(-45deg,  rgba(238,238,238,1) 0%,rgba(189,189,189,1) 47%,rgba(158,158,158,1) 100%); /* IE10+ */
+    background: linear-gradient(135deg,  rgba(238,238,238,1) 0%,rgba(189,189,189,1) 47%,rgba(158,158,158,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#9e9e9e',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+.stat-img.fillred{
+    background: rgb(255,205,210); /* Old browsers */
+    background: -moz-linear-gradient(-45deg,  rgba(255,205,210,1) 0%, rgba(239,83,80,1) 47%, rgba(244,67,54,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(255,205,210,1)), color-stop(47%,rgba(239,83,80,1)), color-stop(100%,rgba(244,67,54,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(-45deg,  rgba(255,205,210,1) 0%,rgba(239,83,80,1) 47%,rgba(244,67,54,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(-45deg,  rgba(255,205,210,1) 0%,rgba(239,83,80,1) 47%,rgba(244,67,54,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(-45deg,  rgba(255,205,210,1) 0%,rgba(239,83,80,1) 47%,rgba(244,67,54,1) 100%); /* IE10+ */
+    background: linear-gradient(135deg,  rgba(255,205,210,1) 0%,rgba(239,83,80,1) 47%,rgba(244,67,54,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffcdd2', endColorstr='#f44336',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+.stat-img.fillgreen{
+    background: rgb(200,230,201); /* Old browsers */
+    background: -moz-linear-gradient(-45deg,  rgba(200,230,201,1) 0%, rgba(102,187,106,1) 47%, rgba(76,175,80,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(200,230,201,1)), color-stop(47%,rgba(102,187,106,1)), color-stop(100%,rgba(76,175,80,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(-45deg,  rgba(200,230,201,1) 0%,rgba(102,187,106,1) 47%,rgba(76,175,80,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(-45deg,  rgba(200,230,201,1) 0%,rgba(102,187,106,1) 47%,rgba(76,175,80,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(-45deg,  rgba(200,230,201,1) 0%,rgba(102,187,106,1) 47%,rgba(76,175,80,1) 100%); /* IE10+ */
+    background: linear-gradient(135deg,  rgba(200,230,201,1) 0%,rgba(102,187,106,1) 47%,rgba(76,175,80,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c8e6c9', endColorstr='#4caf50',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+.stat-img.fillblue{
+    background: rgb(179,229,252); /* Old browsers */
+    background: -moz-linear-gradient(-45deg,  rgba(179,229,252,1) 0%, rgba(79,195,247,1) 47%, rgba(3,169,244,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,rgba(179,229,252,1)), color-stop(47%,rgba(79,195,247,1)), color-stop(100%,rgba(3,169,244,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(-45deg,  rgba(179,229,252,1) 0%,rgba(79,195,247,1) 47%,rgba(3,169,244,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(-45deg,  rgba(179,229,252,1) 0%,rgba(79,195,247,1) 47%,rgba(3,169,244,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(-45deg,  rgba(179,229,252,1) 0%,rgba(79,195,247,1) 47%,rgba(3,169,244,1) 100%); /* IE10+ */
+    background: linear-gradient(135deg,  rgba(179,229,252,1) 0%,rgba(79,195,247,1) 47%,rgba(3,169,244,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b3e5fc', endColorstr='#03a9f4',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+.stat-img:before, .stat-img:after
+{
+    content:"";
+    position:absolute;
+    z-index:-1;
+    -webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    -moz-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    box-shadow:0 0 20px rgba(0,0,0,0.8);
+    top:10px;
+    bottom:10px;
+    left:0;
+    right:0;
+    -moz-border-radius:100px / 10px;
+    border-radius:100px / 10px;
+}
+.stat-img:after
+{
+    right:10px;
+    left:auto;
+    -webkit-transform:skew(8deg) rotate(3deg);
+       -moz-transform:skew(8deg) rotate(3deg);
+        -ms-transform:skew(8deg) rotate(3deg);
+         -o-transform:skew(8deg) rotate(3deg);
+            transform:skew(8deg) rotate(3deg);
+}
+.statistics{
+    font-size: 16pt;
+    font-weight: 400;
+    position: relative;
+    width: -webkit-max-content;
+    width: -moz-max-content;
+    width: max-content;
+    max-width: 150px;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+}
+.right-player .statistics{
+  
+}
+.left-player .statistics{
+  
+}
+.bottom-player .statistics{
+  
+}
+.players-profile{
+  background-color: #272727;
+  color: white;
+  padding: 1px 8px;
+  border-radius: 4px;
+  text-align: center;
+  max-width: 160px;
+  min-width: 100px;
+  height: 35px;
+  opacity: 0.9;
+}  
