--- a/www/templates/homenew2.html
+++ b/www/templates/homenew2.html
@@ -94,7 +94,7 @@
     </div>
     <div class="mob-opt">
       <h3 style="color:white;">Create Private rooms and Invite your friends</h3>
-      <md-button class="redcol home-elem md-raised" aria-label="randomGameStart" ng-click="loginWIthFB()">
+      <md-button class="redcol home-elem md-raised" aria-label="randomGameStart" ng-click="facebookAuth()" ng-controller="registerCtrl">
       <div flex layout="horizontal" layout-align="center center">
         <div style="margin-right:15px;">
           <i class="fa fa-facebook white-label"></i>
