--- a/www/templates/gameReact.html
+++ b/www/templates/gameReact.html
@@ -47,7 +47,7 @@
 <div ng-if="waiting && gameType == 'LIVE'" class="waiting">
     <div flex layout="column" layout-align="center center" style="flex-direction: column;">
     <div>
-        <profile-info ng-repeat="player in connectedPlayers" class="center" content="player" style="float:left; padding:40px;"></profile-info>
+        <profile-info ng-repeat="player in connectedPlayers" class="center" content="player" style="float:left; padding-top:5px;"></profile-info>
     </div>
         <h2>
         {{PlayersToJoinMsg}}
