--- a/www/templates/homenew2.html
+++ b/www/templates/homenew2.html
@@ -141,7 +141,7 @@ profile-info-horz{
   padding-left: 8px;
   bottom: 5px;
   position: relative;
-  font-size: 20px;
+  font-size: 1.2em;
   font-weight: 600;
 }
 </style>
