--- a/www/templates/register.html
+++ b/www/templates/register.html
@@ -69,7 +69,7 @@
 			</a>
 		</div>
 		<div style="display:inline-block;">
-			<h1 class="color-light" style="padding-left:120px;">3.2.5.bridge</h1>
+			<h1 class="color-light" style="padding-left:120px;">3 2 5 Bridge</h1>
 		</div>
 	</div>
 		<h3 class="marg-12 color-light">Create Private Room and Invite your friends</h3>
